- Fixed: Data holder error in console with Folia
- Fixed: WindCharge error on multipaper
- Fixed: Rental sign unusable after restart