@@ -1,3 +1,9 @@
-- Fixed: Data holder error in console with Folia
-- Fixed: WindCharge error on multipaper
-- Fixed: Rental sign unusable after restart
++ Added: [Suggestion] Limit when a war declaration can be sent
+  # Define when a declaration can be sent.
+  send-time:
+    # Day of the week. 0 is Monday and 6 is Sunday.
+    # Example: 0,2,3 -> Allows a declaration be sent on Monday, Wednesday and Thursday.
+    # Default: 0-6 -> Allows all days.
+    days_range: "0-6"
+    # Hours of the above defined days during which a declaration can be sent.
+    hours_range: "0-23"
